second commit, fixed java mail

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,13 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-      
+  mail:
+    properties:
+     mail:
+      smtp:
+          auth: true
+          starttls:
+            enable: true
   security:
    jwt:
     token:
